[gd_scene load_steps=4 format=2]

[ext_resource path="res://Play.gd" type="Script" id=1]
[ext_resource path="res://UI/Desktop/return.gd" type="Script" id=2]
[ext_resource path="res://Assets/Textures/colour theme.tres" type="Theme" id=3]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -512.0
margin_top = -300.0
margin_right = 512.0
margin_bottom = 300.0
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
margin_left = 410.0
margin_right = 614.0
margin_bottom = 600.0
alignment = 1

[node name="Label" type="Label" parent="HBoxContainer/VBoxContainer"]
margin_top = 47.0
margin_right = 204.0
margin_bottom = 78.0
text = "\"Lights Out\"
Desktop Launcher"

[node name="spacer" type="VBoxContainer" parent="HBoxContainer/VBoxContainer"]
margin_top = 82.0
margin_right = 204.0
margin_bottom = 102.0
rect_min_size = Vector2( 130, 20 )

[node name="Play" type="Button" parent="HBoxContainer/VBoxContainer"]
margin_top = 106.0
margin_right = 204.0
margin_bottom = 137.0
theme = ExtResource( 3 )
text = "Play"
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="spacer2" type="VBoxContainer" parent="HBoxContainer/VBoxContainer"]
margin_top = 141.0
margin_right = 204.0
margin_bottom = 161.0
rect_min_size = Vector2( 130, 20 )

[node name="options" type="Button" parent="HBoxContainer/VBoxContainer"]
margin_top = 165.0
margin_right = 204.0
margin_bottom = 196.0
theme = ExtResource( 3 )
text = "Options"

[node name="spacer3" type="VBoxContainer" parent="HBoxContainer/VBoxContainer"]
margin_top = 200.0
margin_right = 204.0
margin_bottom = 220.0
rect_min_size = Vector2( 130, 20 )

[node name="return" type="Button" parent="HBoxContainer/VBoxContainer"]
margin_top = 224.0
margin_right = 204.0
margin_bottom = 255.0
theme = ExtResource( 3 )
text = "Quit"
script = ExtResource( 2 )

[node name="spacer5" type="VBoxContainer" parent="HBoxContainer/VBoxContainer"]
margin_top = 259.0
margin_right = 204.0
margin_bottom = 279.0
rect_min_size = Vector2( 130, 20 )

[node name="creativeCommonsButton" type="Button" parent="HBoxContainer/VBoxContainer"]
margin_top = 283.0
margin_right = 204.0
margin_bottom = 314.0
theme = ExtResource( 3 )
text = "  Creative Commons assets used  "

[node name="spacer4" type="VBoxContainer" parent="HBoxContainer/VBoxContainer"]
margin_top = 318.0
margin_right = 204.0
margin_bottom = 518.0
rect_min_size = Vector2( 130, 200 )

[node name="Button" type="Button" parent="HBoxContainer/VBoxContainer"]
margin_top = 522.0
margin_right = 204.0
margin_bottom = 553.0
theme = ExtResource( 3 )
text = "credits"

[connection signal="pressed" from="HBoxContainer/VBoxContainer/Play" to="HBoxContainer/VBoxContainer/Play" method="_on_Play_pressed"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer/options" to="HBoxContainer/VBoxContainer/Play" method="_on_options_pressed"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer/return" to="HBoxContainer/VBoxContainer/Play" method="_on_return_pressed"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer/return" to="HBoxContainer/VBoxContainer/return" method="_on_return_pressed"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer/creativeCommonsButton" to="HBoxContainer/VBoxContainer/Play" method="_on_creativeCommonsButton_pressed"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer/Button" to="HBoxContainer/VBoxContainer/Play" method="_on_Button_pressed"]
